# captura-text

./: .dockerignore  .gitignore  builder.yaml  logging.yaml  pyproject.toml  resume.yaml  setup.cfg
builder/: __init__.py  __main__.py  command.py  controller.py  router.py  rst.py  schemas.py  snippets.py
docker/: bashrc  docker-compose.yaml  dockerfile  hooks.py
src/text_app/: __init__.py  depends.py  fields.py  router.py  schemas.py
src/text_client/: __init__.py  __main__.py  command.py  controller.py
text/: __main__.py  command.py  controller.py  hooks.py  router.py  schemas.py  snippets.py
