# NOTE: Packaging on hold until app publishes to pypi.

[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
authors = [{name = "Adrian Cederberg", email = "adrn.cederberg123@gmail.com"}, ]
name = "captura-text"
version = "0.1.1"
description = "A captura plugin for runing static like sites."
readme = "README.rst"
keywords = ["captura", "text", "web", "api", "rst", "markdown"]


classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.11',
    'Intended Audience :: Developers',
    'Topic :: Internet',
]


dependencies = [
  "docutils",
]


[tool.setuptools.packages.find]
where = ["src"]


[project.optional-dependencies]
ci = [
  "bumpver",
  "twine",
]
dev = [
	"black",
	"flake8",
	"mypy",
	"isort",
  "autoflake",
  "jedi-language-server",
  "docker",
  "yamllint",
]


[tool.bumpver]
current_version = "0.1.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false


[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/text_app/__init__.py" = ["{version}"]
"docker/docker-compose.yaml" = ["image: acederberg/captura-text/development:{version}"]


[tool.black]


# NOTE: See the documentation for the various configuration fields here:
#
#       .. code:: txt
#
#           https://pycqa.github.io/isort/docs/configuration/options.html
#
# NOTE: Does not support multiline headings. Is not indempotent.
[tool.isort]
profile = "black"
import_heading_stdlib = "=========================================================================== #"
import_heading_firstparty = "--------------------------------------------------------------------------- #" #\n# Captura\n"
skip = [".venv-local", ".venv"]
src_paths = ["src", "tests"]



